--- a/initializr-web/pom.xml
+++ b/initializr-web/pom.xml
@@ -101,6 +101,10 @@
 			<artifactId>selenium-support</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency> -->
 	</dependencies>
 
 	<build>
@@ -118,6 +122,7 @@
 						<inherited>false</inherited>
 						<configuration>
 							<attach>true</attach>
+							<runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
 							<descriptors>
 								<descriptor>${basedir}/src/assembly/snippets.xml
 								</descriptor>
